--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 
 
 <head>
@@ -28,7 +28,7 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../..">Home</a></li>
-          <li><a href='../../php/scommesse/scommetti.php'>Scommesse</a></li>
+          <li><a href='../../php/scommesse/scommesse.php'>Scommesse</a></li>
           <li><a href="../../php/gare/risultati.php">Gare</a></li>
           <li><a href="../../php/cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
@@ -60,7 +60,7 @@
           <input type="text" id="surname" placeholder="Barca" name="surname" maxlength="50" aria-label="Cognome" required="required" />
         </fieldset>
         <label for="date"><span>Data di nascita (GG/MM/AAAA)</span><span class="visually-hidden"> Richiesto</span></label>
-        <input type="date" id="date" placeholder="14/07/1974" name="date" aria-label="Data di nascita (giorno/mese/anno)" required="required" />
+        <input type="date" id="date" name="date" aria-label="Data di nascita (giorno/mese/anno)" required="required" />
         <fieldset>
           <legend>Residenza</legend>
           <label for="address"><span>Indirizzo</span><span class="visually-hidden"> Richiesto</span></label>
