--- a/html/scommesse/confirmScommessa.html
+++ b/html/scommesse/confirmScommessa.html
@@ -33,7 +33,7 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li><a href="../../">Home</a></li>
-          <li><a href="../scommesse/scommetti.php">Scommesse</a></li>
+          <li><a href="../scommesse/scommesse.php">Scommesse</a></li>
           <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href='cavalli.php'>Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
@@ -68,7 +68,7 @@
             <h3>Puntata: <valore-puntata /></h3>
           </div>
           <form-inputs />
-          <a href="scommetti.php">
+          <a href="scommesse.php">
             <div class="button">
               Annulla
             </div>
