--- a/html/scommesse/garaScommessaNoJs.html
+++ b/html/scommesse/garaScommessaNoJs.html
@@ -29,7 +29,7 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
-          <li><a href="../../php/scommesse/scommetti.php">Scommesse</a></li>
+          <li><a href="../../php/scommesse/scommesse.php">Scommesse</a></li>
           <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
@@ -51,7 +51,7 @@
 
       <form />
 
-      <a href="./scommetti.php" class="centerLink">Torna indietro</a>
+      <a href="./scommesse.php" class="centerLink">Torna indietro</a>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
 
