--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -26,7 +26,7 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en">Dashboard</li>
-          <li><a href='../../php/scommesse/scommetti.php'>Scommesse</a></li>
+          <li><a href='../../php/scommesse/scommesse.php'>Scommesse</a></li>
           <li><a href="../../php/cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../../php/gare/risultati.php">Gare</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
@@ -41,27 +41,26 @@
     </div>
     <main id="content">
       <nav>
-        <dl id="db-cards">
-          <dt>
-            <h2>Cavalli</h2>
-          </dt>
+        <dl>
+          <dt>Cavalli</dt>
           <dd>
-            <h3><num-cavalli /></h3>
+            <p>
+              <num-cavalli />
+            </p>
             <p><a href="../../php/admin/gestisciCavalli.php" class="centerLink">Gestici i cavalli</a></p>
           </dd>
-        </dl>
-          <dt>
-            <h2>Gare</h2>
-          </dt>
+          <dt>Gare</dt>
           <dd>
-            <h3><num-gare /></h3>
+            <p>
+              <num-gare />
+            </p>
             <p><a href="../../php/admin/aggiungiGaraNoJs.php" class="centerLink">Crea nuove gare</a></p>
           </dd>
-          <dt>
-            <h2>Risultati</h2>
-          </dt>
+          <dt>Risultati</dt>
           <dd>
-            <h3><num-risultati /></h3>
+            <p>
+              <num-risultati />
+            </p>
             <p><a href="../../php/admin/aggiungiRisultatiNoJs.php" class="centerLink">Aggiungi risultati alle gare concluse</a></p>
           </dd>
         </dl>
