--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 
 <head>
   <meta charset="UTF-8">
@@ -27,7 +27,7 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../index.php">Home</a></li>
-          <li><a href="../../php/scommesse/scommetti.php">Scommesse</a></li>
+          <li><a href="../../php/scommesse/scommesse.php">Scommesse</a></li>
           <li><a href="../../php/gare/risultati.php">Gare</a></li>
           <li><a href="../../php/cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
@@ -37,7 +37,7 @@
       </nav>
       <ul id="breadcrumb">
         <li class="visually-hidden">Ti trovi in:</li>
-        <li lang="eng">Home</li>
+        <li lang="en">Home</li>
         <li>Risultati gare</li>
       </ul>
     </div>
