--- a/html/scommesse/scommesseUtente.html
+++ b/html/scommesse/scommesseUtente.html
@@ -28,7 +28,7 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
-          <li><a href='scommetti.php'>Scommesse</a></li>
+          <li><a href='scommesse.php'>Scommesse</a></li>
           <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
