--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 768px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
   <link rel="icon" href="../../images/logo.jpeg" />
+  <script type="text/javascript" src="../../script/controlli.js"></script>
 </head>
 
 <body>
