Aggiunte classi per problemi nel php
Cambiato visually hidden su mobile per nascondere alcune cose che si vedevano lo stesso

--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -46,9 +46,9 @@
       <risultato-verifica />
       <form method="post" name="Form" action="login.php" aria-labelledby="form-header">
         <h2 id="form-header">Login</h2>
-        <label for="username"><span>Username</span><span class="visually-hidden"> Richiesto</span></label>
+        <label for="username"><span>Username</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="text" id="username" placeholder="Username" name="username" aria-label="Username" required="required" />
-        <label for="password"><span>Password</span><span class="visually-hidden"> Richiesto</span></label>
+        <label for="password"><span>Password</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="password" id="password" placeholder="Password" name="password" aria-label="Password" required="required" />
         <span>
           <input type="submit" name="login" value="Accedi">
