--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -49,27 +49,27 @@
       <risultato-verifica />
       <form method="post" onsubmit="return validazioneInput()" action="register.php" id="register" aria-labelledby="form-header">
         <h2 id="form-header">Registrazione</h2>
-        <label for="username"><span>Username</span><span class="visually-hidden"> Richiesto</span></label>
+        <label for="username"><span>Username</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="text" id="username" placeholder="swag.barca69" name="username" maxlength="50" aria-label="Username" required="required" />
-        <label for="password"><span>Password</span><span class="visually-hidden"> Richiesto</span></label>
+        <label for="password"><span>Password</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="password" id="password" placeholder="Password" name="password" minlength="6" aria-label="Password" required="required" />
         <fieldset>
           <legend>Nominativo</legend>
-          <label for="name"><span>Nome</span><span class="visually-hidden"> Richiesto</span></label>
+          <label for="name"><span>Nome</span><span class="visually-hidden">(Richiesto)</span></label>
           <input type="text" id="name" placeholder="Swag" name="name" maxlength="50" aria-label="Nome" required="required" />
-          <label for="surname"><span>Cognome</span><span class="visually-hidden"> Richiesto</span></label>
+          <label for="surname"><span>Cognome</span><span class="visually-hidden">(Richiesto)</span></label>
           <input type="text" id="surname" placeholder="Barca" name="surname" maxlength="50" aria-label="Cognome" required="required" />
         </fieldset>
-        <label for="date"><span>Data di nascita (GG/MM/AAAA)</span><span class="visually-hidden"> Richiesto</span></label>
+        <label for="date"><span>Data di nascita (GG/MM/AAAA)</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="date" id="date" name="date" aria-label="Data di nascita (giorno/mese/anno)" required="required" />
         <fieldset>
           <legend>Residenza</legend>
-          <label for="address"><span>Indirizzo</span><span class="visually-hidden"> Richiesto</span></label>
+          <label for="address"><span>Indirizzo</span><span class="visually-hidden">(Richiesto)</span></label>
           <input type="text" id="address" placeholder="Indirizzo" name="address" maxlength="50" aria-label="Indirizzo" required="required" />
           <label for="city"><span>Città</span></label>
           <input type="text" id="city" placeholder="Città" name="city" maxlength="50" aria-label="Città" required="required" />
         </fieldset>
-        <label for="mail"><span>Indirizzo e-mail</span><span class="visually-hidden"> Richiesto</span></label>
+        <label for="mail"><span>Indirizzo e-mail</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="text" id="mail" placeholder="Mail" name="mail" pattern="[a-zA-Z0-9]+[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]{0,}[a-zA-Z0-9]{0,}@[a-zA-Z0-9]{3,}\.[a-zA-Z]{2,3}$" maxlength="50" aria-label="indirizzo email" required="required" />
         <input type="submit" name="register" value="Registrati" />
       </form>
