--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -2,10 +2,6 @@
 <html lang="it">
 
 <head>
-  <noscript>
-    <style>html{display:none;}</style>
-    <meta http-equiv="refresh" content="0.0;url=aggiungiGaraNoJs.php">
-  </noscript>
   <meta charset="UTF-8">
   <title>Aggiungi Gara - Ippodromo NO₂¯</title>
   <meta name="title" content="Aggiungi gara - Ippodromo NO₂¯" />
@@ -47,7 +43,7 @@
     </div>
     <main id="content">
       <risultati-inserimento />
-      <form method="post" action="aggiungiGara.php" id="inserimentoGara" aria-labelledby="form-header">
+      <form method="post" id="inserimentoGara" action="verificaInserimentoGaraNoJs.php" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci le informazioni della gara</h2>
         <p>In ogni gara corrono almeno 4 cavalli e non più di 8 cavalli</p>
         <label for="date"><span>Data gara (GG/MM/AAAA)</span><span class="visually-hidden">(Richiesto)</span></label>
@@ -59,7 +55,7 @@
           <cavalli />
         </fieldset>
         <span>
-          <input id='submit-button' type="submit" name="register" value="Inserisci la gara" disabled="disabled" />
+          <input id='submit-button' onclick='controllaNumeroCavalli()' type="submit" name="register" value="Inserisci la gara"  />
         </span>
       </form>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
