fix grandezza chk rdio box, fonting e form mobile

--- a/html/admin/gestisciCavalli.html
+++ b/html/admin/gestisciCavalli.html
@@ -42,7 +42,7 @@
     </div>
     <main id="content">
       
-      <a href="../admin/aggiungiCavallo.php">Inserisci un nuovo cavallo</a>
+      <a href="../admin/aggiungiCavallo.php" class="centerLink">Inserisci un nuovo cavallo</a>
       <risultato-eliminazione />
       <!-- volendo si puó nascondere/visualizzare con js invece che cambiare pagina -->
       <table>
