--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -43,7 +43,7 @@
     </div>
     <main id="content">
       <h2>Perché esiste <strong>Ippodromo NO₂¯</strong>?</h2>
-      <p>
+      <p class="fonting">
         Risposta breve: <em>fare soldi</em>. Può forse esserci motivo migliore? Noi crediamo di no, ed è per questo che dalla nostra creazione non facciamo altro che cercare in tutti i modi di <em>fregare</em> chi scommette sulle corse nel nostro ippodromo. A dire il vero, l'unico motivo per cui all'inizio organizzavamo corse di ippopotami è perché permettevano di avere un margine maggiore nel breve termine, in termini monetari e di propolarità. Questo ci ha permesso di creare una struttura più grande per le corse di cavalli, che ci ha permesso di avere un margine molto più grande sul lungo termine per via del maggior numero di clienti e di scommesse ad alto rischio.
       </p>
       <div class="authorsInfo">
@@ -81,7 +81,7 @@
       </div>
       <div class="thanks">
         <h2>Ringraziamenti</h2>
-        <p>
+        <p class="fonting">
           Ringraziamo i nostri amici <strong><span lang="en">God King</span> Zaia</strong> e <strong>Rybi04</strong> per averci sempre sostenuto moralmente e aver sempre creduto in noi. Non saremmo mai arrivati alla vetta del nostro impero di scommesse senza il vostro supporto.
         </p>
         <img src="../../thanks_pfp.png" alt="" />
