--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -50,15 +50,15 @@
       <form method="post" onsubmit="return validazioneInput()" action="register.php" id="register" aria-labelledby="form-header">
         <h2 id="form-header">Registrazione</h2>
         <label for="username"><span>Username</span><span class="visually-hidden">(Richiesto)</span></label>
-        <input type="text" id="username" placeholder="swag.barca69" name="username" maxlength="50" aria-label="Username" required="required" />
+        <input type="text" id="username" placeholder="Username" name="username" maxlength="50" aria-label="Username" required="required" />
         <label for="password"><span>Password</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="password" id="password" placeholder="Password" name="password" minlength="6" aria-label="Password" required="required" />
         <fieldset>
           <legend>Nominativo</legend>
           <label for="name"><span>Nome</span><span class="visually-hidden">(Richiesto)</span></label>
-          <input type="text" id="name" placeholder="Swag" name="name" maxlength="50" aria-label="Nome" required="required" />
+          <input type="text" id="name" placeholder="Name" name="name" maxlength="50" aria-label="Nome" required="required" />
           <label for="surname"><span>Cognome</span><span class="visually-hidden">(Richiesto)</span></label>
-          <input type="text" id="surname" placeholder="Barca" name="surname" maxlength="50" aria-label="Cognome" required="required" />
+          <input type="text" id="surname" placeholder="Surname" name="surname" maxlength="50" aria-label="Cognome" required="required" />
         </fieldset>
         <label for="date"><span>Data di nascita (GG/MM/AAAA)</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="date" id="date" name="date" aria-label="Data di nascita (giorno/mese/anno)" required="required" />
