--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body onload="JsRisultatiControl()">
+<body onload="jsRisultatiControl()">
   <header>
     <h1>Inserisci risultati gara</h1>
   </header>
