Risolti problemi riscontrati durante il controllo sul server

--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
           <p>
             Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di bitscuits gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
           </p>
-          <img src="images/bitsquit.png" class="imgContent" alt="Un biscotto in 8 bit, simbolo della valuta" />
+          <img src="images/bitscuit.png" class="imgContent" alt="Un biscotto in 8 bit, simbolo della valuta" />
         </dd>
       </dl>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
