--- a/html/scommesse/confirmScommessa.html
+++ b/html/scommesse/confirmScommessa.html
@@ -68,11 +68,7 @@
             <h3>Puntata: <valore-puntata /></h3>
           </div>
           <form-inputs />
-          <a href="scommesse.php">
-            <div class="button">
-              Annulla
-            </div>
-          </a>
+          <a href="scommesse.php" class="centerLink">Annulla</a>
           <confirm-input />
         </form>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
