Inserite informazioni nei form

--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -45,6 +45,7 @@
       <risultato-inserimento />
       <form method="post" action="../../php/admin/aggiungiCavallo.php" id="inserimentoCavallo" enctype="multipart/form-data" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci i dati riguardanti il nuovo cavallo!</h2>
+        <p>Tutti i campi sono obbligatori</p>
         <label for="name"><span>Nome</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="text" id="name" placeholder="Nome Cavallo" name="nome" maxlength="50" aria-label="Nome cavallo" required="required" />
         <label for="speed"><span>Velocità</span><span class="visually-hidden">(Richiesto)</span></label>
