--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -46,6 +46,7 @@
       <risultato-verifica />
       <form method="post" name="Form" action="login.php" aria-labelledby="form-header">
         <h2 id="form-header">Login</h2>
+        <p>Tutti i campi sono obbligatori</p>
         <label for="username"><span>Username</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="text" id="username" placeholder="Username" name="username" aria-label="Username" required="required" />
         <label for="password"><span>Password</span><span class="visually-hidden">(Richiesto)</span></label>
