--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -49,6 +49,8 @@
       <risultato-verifica />
       <form method="post" onsubmit="return validazioneInput()" action="register.php" id="register" aria-labelledby="form-header">
         <h2 id="form-header">Registrazione</h2>
+        <p>Devi essere maggiorenne per iscriverti</p>
+        <p>Tutti i campi sono obbligatori</p>
         <label for="username"><span>Username</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="text" id="username" placeholder="Username" name="username" maxlength="50" aria-label="Username" required="required" />
         <label for="password"><span>Password</span><span class="visually-hidden">(Richiesto)</span></label>
