--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -46,6 +46,8 @@
       <form method="post" id="inserimentoGara"  action="verificaInserimentoGara.php" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci le informazioni della gara</h2>
         <p>In ogni gara corrono almeno 4 cavalli e non più di 8 cavalli</p>
+        <p>Inserisci una data a partire da oggi. Le gare si svolgono dalle 8:00 alle 22:00</p>
+        <p>Tutti i campi sono obbligatori</p>
         <label for="date"><span>Data gara (GG/MM/AAAA)</span><span class="visually-hidden">(Richiesto)</span></label>
         <input type="date" id="date" name="date" aria-label="Data gara (giorno/mese/anno)" required="required" />
         <label for="time"><span>Orario gara (HH/MM)</span><span class="visually-hidden">(Richiesto)</span></label>
